# tiny-orm

./: CMakeLists.txt  LICENSE  README.md  tiny-serializer-design.md
docs/: tinyorm.mdj
example/: demo_orm.cpp  demo_reflection.cpp  demo_serialize.cpp  demo_serialize_dyn.cpp  player.h  player.pb.cc  player.pb.h  player.proto
example/tinyobj/: tinyobj.cpp  tinyobj.h  tinyplayer.cpp  tinyplayer.h  tinyplayer.orm.h  tinyplayer.pb.cc  tinyplayer.pb.h  tinyplayer.proto  tinyplayer.xml
include/: archive.pb.cc  archive.pb.h  archive.proto  hashkit.h  pool.h  pool_sharding.h  sharding.h  tinydb.h  tinylogger.h  tinymysql.h  tinyorm.h  tinyorm_mysql.h  tinyorm_mysql.in.h  tinyorm_soci.h  tinyorm_soci.in.h  tinyreflection.h  tinyserializer.h  tinyserializer_proto.h  tinyserializer_proto_dyn.h  tinyserializer_proto_mapping.h  tinyworld.h  url.h
src/: hashkit.cpp  tinymysql.cpp  tinyorm.cpp  url.cpp
test/: catch.hpp  test_serialize.cpp
tools/: tinyobj.py
